--- a/AppleMusicStApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
+++ b/AppleMusicStApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,8 +17,123 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sOd-At-Ip5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0Wa-NT-9At">
+                                    <size key="itemSize" width="180" height="240"/>
+                                    <size key="headerReferenceSize" width="414" height="296"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TrackCollecionViewCell" id="hJZ-w8-Wf4" customClass="TrackCollecionViewCell" customModule="AppleMusicStApp" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="316" width="180" height="240"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="eV8-Gi-FUV">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="240"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ypG-1d-4BF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="ypG-1d-4BF" secondAttribute="height" multiplier="1:1" id="X7J-6F-0wq"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3D-Ys-Nab">
+                                                    <rect key="frame" x="0.0" y="184" width="180" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHs-eb-CLn">
+                                                    <rect key="frame" x="0.0" y="210" width="180" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="k3D-Ys-Nab" firstAttribute="leading" secondItem="eV8-Gi-FUV" secondAttribute="leading" id="Cb4-Et-zSY"/>
+                                                <constraint firstItem="ypG-1d-4BF" firstAttribute="top" secondItem="eV8-Gi-FUV" secondAttribute="top" id="HPa-fJ-JkD"/>
+                                                <constraint firstItem="k3D-Ys-Nab" firstAttribute="top" secondItem="ypG-1d-4BF" secondAttribute="bottom" constant="4" id="Q2h-rk-lD4"/>
+                                                <constraint firstAttribute="trailing" secondItem="k3D-Ys-Nab" secondAttribute="trailing" id="RbA-DE-Osr"/>
+                                                <constraint firstAttribute="trailing" secondItem="PHs-eb-CLn" secondAttribute="trailing" id="SwP-8U-efx"/>
+                                                <constraint firstItem="PHs-eb-CLn" firstAttribute="top" secondItem="k3D-Ys-Nab" secondAttribute="bottom" constant="4" id="fmw-2A-wRE"/>
+                                                <constraint firstItem="PHs-eb-CLn" firstAttribute="leading" secondItem="eV8-Gi-FUV" secondAttribute="leading" id="j2e-TR-zcQ"/>
+                                                <constraint firstItem="ypG-1d-4BF" firstAttribute="leading" secondItem="eV8-Gi-FUV" secondAttribute="leading" id="oHp-m0-lGV"/>
+                                                <constraint firstAttribute="trailing" secondItem="ypG-1d-4BF" secondAttribute="trailing" id="yfK-ad-cAL"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="trackArtist" destination="PHs-eb-CLn" id="ke7-zt-n0n"/>
+                                            <outlet property="trackThumbnail" destination="ypG-1d-4BF" id="7ZP-4v-2oh"/>
+                                            <outlet property="trackTitle" destination="k3D-Ys-Nab" id="s17-cH-bRI"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bbp-z8-4n2">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="296"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Pick" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x3U-nA-eIc">
+                                            <rect key="frame" x="20" y="30" width="183" height="36"/>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1TF-Lm-RgT">
+                                            <rect key="frame" x="30" y="71" width="354" height="200"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="rnO-LQ-Nc0"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9vJ-yu-uR8">
+                                            <rect key="frame" x="309" y="218" width="65" height="49"/>
+                                            <color key="tintColor" systemColor="systemYellowColor"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PLAY NOW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GiO-Qa-iIh">
+                                            <rect key="frame" x="39" y="186" width="89" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PLAY NOW Today's pick is" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0e-DW-85w">
+                                            <rect key="frame" x="39" y="220" width="214" height="41"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="I0e-DW-85w" firstAttribute="leading" secondItem="1TF-Lm-RgT" secondAttribute="leading" id="0Xg-YP-oVN"/>
+                                        <constraint firstItem="I0e-DW-85w" firstAttribute="bottom" secondItem="1TF-Lm-RgT" secondAttribute="bottom" constant="-10" id="NZC-IY-c3R"/>
+                                        <constraint firstItem="1TF-Lm-RgT" firstAttribute="top" secondItem="x3U-nA-eIc" secondAttribute="bottom" constant="5" id="OD2-tr-jHv"/>
+                                        <constraint firstItem="x3U-nA-eIc" firstAttribute="leading" secondItem="bbp-z8-4n2" secondAttribute="leading" constant="20" id="RjU-gJ-WLS"/>
+                                        <constraint firstItem="9vJ-yu-uR8" firstAttribute="bottom" secondItem="1TF-Lm-RgT" secondAttribute="bottom" constant="-5" id="ewv-xL-CMA"/>
+                                        <constraint firstItem="9vJ-yu-uR8" firstAttribute="leading" secondItem="I0e-DW-85w" secondAttribute="trailing" constant="15" id="fBS-eB-1NZ"/>
+                                        <constraint firstItem="9vJ-yu-uR8" firstAttribute="trailing" secondItem="1TF-Lm-RgT" secondAttribute="trailing" constant="-10" id="h4r-FO-PEa"/>
+                                        <constraint firstItem="x3U-nA-eIc" firstAttribute="top" secondItem="bbp-z8-4n2" secondAttribute="top" constant="30" id="mM7-6W-RES"/>
+                                        <constraint firstAttribute="trailing" secondItem="1TF-Lm-RgT" secondAttribute="trailing" constant="30" id="sL5-3i-SeI"/>
+                                        <constraint firstItem="1TF-Lm-RgT" firstAttribute="leading" secondItem="bbp-z8-4n2" secondAttribute="leading" constant="30" id="yO1-Aa-fc6"/>
+                                    </constraints>
+                                </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="D4o-2C-UZr"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="2ye-zW-P5T"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sOd-At-Ip5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="X16-UF-gf2"/>
+                            <constraint firstItem="sOd-At-Ip5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Yi0-xt-CgG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sOd-At-Ip5" secondAttribute="bottom" id="eiO-gi-lnb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sOd-At-Ip5" secondAttribute="trailing" id="hTM-BM-HlH"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -23,4 +141,13 @@
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="play.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
